--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./web-app/*"]
+      "~/*": ["app/*"]
     },
 
     // Remix takes care of building everything in `remix build`.
