--- a/package.json
+++ b/package.json
@@ -1,54 +1,15 @@
 {
   "name": "remix-tutorial",
+  "version": "1.0.0",
+  "main": "index.js",
+  "author": "Nikolai Maslak <nikolai.maslak@brightpattern.com>",
+  "license": "MIT",
   "private": true,
-  "sideEffects": false,
-  "exports": "./dist/index.js",
-  "type": "module",
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "build": "remix vite:build",
-    "dev": "remix vite:dev",
-    "dev:bot": "npx nodemon --watch bot/index.ts --ext ts --exec \"tsc -p tsconfig.bot.json && node dist/bot/index.js\"",
-    "build:bot": "tsc -p tsconfig.bot.json",
-    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "remix-serve build/server/index.js",
-    "typecheck": "tsc"
+    "build": "yarn workspaces foreach --all run build"
   },
-  "dependencies": {
-    "@remix-run/node": "^2.8.1",
-    "@remix-run/react": "^2.8.1",
-    "@remix-run/serve": "^2.8.1",
-    "dotenv": "^16.4.5",
-    "isbot": "^4.1.0",
-    "match-sorter": "^6.3.1",
-    "mongoose": "^8.3.2",
-    "node-telegram-bot-api": "^0.65.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sort-by": "^1.2.0",
-    "tiny-invariant": "^1.3.1"
-  },
-  "devDependencies": {
-    "@remix-run/dev": "^2.8.1",
-    "@types/node": "^20.12.7",
-    "@types/node-telegram-bot-api": "^0.64.6",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.13.0",
-    "@typescript-eslint/parser": "^6.13.0",
-    "eslint": "^8.47.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2",
-    "tsc-watch": "^6.2.0",
-    "typescript": "^5.4.5",
-    "vite": "^5.1.4",
-    "vite-tsconfig-paths": "^4.3.1"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  }
+  "packageManager": "yarn@4.1.1"
 }
