--- a/packages/telegram-miniapp/tsconfig.json
+++ b/packages/telegram-miniapp/tsconfig.json
@@ -22,7 +22,8 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["app/*"]
+      "~/*": ["app/*"],
+      "shared": ["./packages/shared"],
     },
 
     // Remix takes care of building everything in `remix build`.
