--- a/packages/telegram-bot/package.json
+++ b/packages/telegram-bot/package.json
@@ -4,6 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "ls"
+    "build": "ls",
+    "start": "ts-node src/index.ts",
+    "dev": "nodemon --exec ts-node index.ts"
+  },
+  "dependencies": {
+    "node-telegram-bot-api": "^0.65.1"
+  },
+  "devDependencies": {
+    "@types/node-telegram-bot-api": "^0.64.6",
+    "nodemon": "^3.1.0"
   }
 }
