--- a/packages/telegram-bot/package.json
+++ b/packages/telegram-bot/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "ls",
-    "start": "ts-node src/index.ts",
+    "start": "ts-node index.ts",
     "dev": "nodemon --exec ts-node index.ts"
   },
   "dependencies": {
