--- a/packages/telegram-bot/package.json
+++ b/packages/telegram-bot/package.json
@@ -9,10 +9,9 @@
     "start": "ts-node index.ts"
   },
   "dependencies": {
-    "node-telegram-bot-api": "^0.65.1"
+    "telegraf": "^4.16.3"
   },
   "devDependencies": {
-    "@types/node-telegram-bot-api": "^0.64.6",
     "nodemon": "^3.1.0"
   }
 }
