--- a/packages/telegram-bot/package.json
+++ b/packages/telegram-bot/package.json
@@ -9,9 +9,11 @@
     "start": "ts-node index.ts"
   },
   "dependencies": {
+    "express": "^4.19.2",
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "nodemon": "^3.1.0"
   }
 }
