--- a/packages/telegram-miniapp/tsconfig.json
+++ b/packages/telegram-miniapp/tsconfig.json
@@ -9,7 +9,7 @@
   ],
   "compilerOptions": {
     "lib": ["DOM", "DOM.Iterable", "ES2022"],
-    "types": ["@remix-run/node", "vite/client"],
+    "types": ["@remix-run/node", "vite/client", "telegram-webapps"],
     "isolatedModules": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
@@ -25,6 +25,9 @@
       "~/*": ["app/*"],
       "shared": ["./packages/shared"],
     },
+    "typeRoots": [
+      "../../node_modules/telegram-webapps"
+    ],
 
     // Remix takes care of building everything in `remix build`.
     "noEmit": true
