--- a/packages/telegram-miniapp/package.json
+++ b/packages/telegram-miniapp/package.json
@@ -16,6 +16,7 @@
     "@remix-run/node": "^2.8.1",
     "@remix-run/react": "^2.8.1",
     "@remix-run/serve": "^2.8.1",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "isbot": "^4.1.0",
     "match-sorter": "^6.3.1",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^2.8.1",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
