--- a/packages/telegram-miniapp/package.json
+++ b/packages/telegram-miniapp/package.json
@@ -35,6 +35,7 @@
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
     "autoprefixer": "^10.4.19",
+    "classnames": "^2.5.1",
     "eslint": "^8.47.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
