--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "build": "yarn workspaces foreach --all --interlaced run build",
     "start": "yarn workspaces foreach --all --parallel --interlaced run start"
   },
-  "packageManager": "yarn@4.1.1"
+  "packageManager": "yarn@4.1.1",
+  "dependencies": {
+    "jotai": "^2.8.0"
+  }
 }
