--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -6,9 +6,9 @@
   "exports": "./dist/index.js",
   "type": "module",
   "scripts": {
-    "dev": "remix vite:dev",
+    "dev": "cross-env PORT=5174 node ./server.js",
     "build": "remix vite:build",
-    "start": "remix-serve build/server/index.js",
+    "start": "cross-env NODE_ENV=production node server.js",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "typecheck": "tsc"
   },
@@ -16,6 +16,8 @@
     "@remix-run/node": "^2.8.1",
     "@remix-run/react": "^2.8.1",
     "@remix-run/serve": "^2.8.1",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "isbot": "^4.1.0",
@@ -28,6 +30,7 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^2.8.1",
+    "@types/cors": "^2.8.17",
     "@types/crypto-js": "^4.2.2",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.20",
