--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -9,7 +9,7 @@
   ],
   "compilerOptions": {
     "lib": ["DOM", "DOM.Iterable", "ES2022"],
-    "types": ["@remix-run/node", "vite/client", "telegram-webapps"],
+    "types": ["node", "@remix-run/node", "vite/client", "telegram-webapps"],
     "isolatedModules": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
