--- a/packages/telegram-bot/package.json
+++ b/packages/telegram-bot/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon --exec ts-node index.ts",
+    "dev": "cross-env NODE_ENV=development nodemon --exec ts-node index.ts",
     "build": "ls",
-    "start": "ts-node index.ts"
+    "start": "cross-env NODE_ENV=production ts-node index.ts"
   },
   "dependencies": {
     "express": "^4.19.2",
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "cross-env": "^7.0.3",
     "nodemon": "^3.1.0"
   }
 }
