--- a/packages/telegram-miniapp/package.json
+++ b/packages/telegram-miniapp/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite -- --open --port 3000",
     "build": "tsc && vite build",
     "start": "# Github pages",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
