--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -7,8 +7,8 @@
     "mongoose": "^8.3.2"
   },
   "scripts": {
-    "dev": "exit 0",
-    "build": "exit 0",
-    "start": "exit 0"
+    "dev": "",
+    "build": "",
+    "start": ""
   }
 }
